--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "Yukki Music Bot",
+    "name": "Romance music",
     "description": "Telegram Group Calls streaming bot with some useful features, written in Python with Pyrogram and Py-Tgcalls. Supporting platforms like Youtube, Spotify, Resso, AppleMusic, Soundcloud and M3u8 Links.",
-    "logo": "https://telegra.ph/file/c0e014ff34f34d1056627.png",
+    "logo": "https://telegra.ph/file/61982bfd7ee31bcd97cb2.jpg",
     "keywords": [
     "python3",
     "telegram",
@@ -65,7 +65,7 @@
       },      
       "START_IMG_URL": {
         "description": "Telegraph Image URL For Start Command",
-        "value": "https://telegra.ph/file/e17f42bc195635b668d6d.jpg",
+        "value": "https://telegra.ph/file/61982bfd7ee31bcd97cb2.jpg",
         "required": true
       }
     },
